<resources>
    <string name="app_name">Restaurant</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_dish">Agregar Plato</string>
    <string name="choose_a_dish">Seleccione un plato</string>
    <string name="is_Alergic">Poseé Alérgenos?</string>
    <string name="comments">Comentarios</string>
    <string name="alergens_list">Lista Alergenos</string>
    <string name="price">Precio</string>
    <string name="dish_name">Nombre del plato</string>
    <string name="alergers_list">Lista Alergenos</string>
    <string name="previous">Anterior</string>
    <string name="after">Siguiente</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="loading">Cargando</string>
    <string name="total">Total</string>
</resources>
